--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -14,7 +14,7 @@
         <tr>
           <td class="mdl-data-table__cell--non-numeric url-id">{{url.id}}</td>
           <td class="mdl-data-table__cell--non-numeric"><a href="{{url.destination}}">{{url.destination}}</a></td>
-          <td class="mdl-data-table__cell--non-numeric">{{url.createdAt}}</td>
+          <td class="mdl-data-table__cell--non-numeric">{{url.formattedCreatedAt}}</td>
         </tr>
       {{/each}}
     </tbody>
